# parsing-router

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
parsing_router/: config.py  container.py  exceptions.py  handler.py  interfaces.py  main.py  models.py  router.py
tests/: conftest.py  test_handler.py  test_router.py  test_settings.py
tests/fixtures/: data.py  settings.py
